--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator voor SWIFT 2,3
-  description: Microsoft BizTalk Accelerator voor SWIFT 2,3 volgt het vaste levenscyclus beleid.
+  title: Microsoft BizTalk Accelerator voor SWIFT 2.3
+  description: Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 255f9cf85c3d65c0f2a538c76f9db4eb2489d6b0
   ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/13/2020
   ms.locfileid: "893530"
-name: Microsoft BizTalk Accelerator voor SWIFT 2,3
+name: Microsoft BizTalk Accelerator voor SWIFT 2.3
 summary: >+
-  Microsoft BizTalk Accelerator voor SWIFT 2,3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 06/21/2006
   endDate: 10/14/2008
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Verre"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
