--- a/lifecycle-data/products/windows-essential-business-server-2008.yml
+++ b/lifecycle-data/products/windows-essential-business-server-2008.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Essential Business Server 2008
-  description: Windows Essential Business Server 2008 volgt het beleid voor vaste levenscyclus.
+  description: Windows Essential Business Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: eec6a2b5b250aa779f288b4fa18e5c3330fe9f28
   ms.sourcegitcommit: e3a3bd051020add66386d68528657bb59240d90b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/30/2020
   ms.locfileid: "879000"
 name: Windows Essential Business Server 2008
 summary: >
-  Windows Essential Business Server 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Essential Business Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke componentproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.
+  > De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.
 products:
 - windows
 policyType: fixed
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 12/12/2008
   endDate: 02/13/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://aka.ms/AA1ovn4)\n* [Productinformatie](/previous-versions/tn-archive/cc540094(v=ws.10)?redirectedfrom=MSDN)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Productgegevens](/previous-versions/tn-archive/cc540094(v=ws.10)?redirectedfrom=MSDN)"
