--- a/lifecycle-data/products/biztalk-server-2010.yml
+++ b/lifecycle-data/products/biztalk-server-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: BizTalk Server 2010
-  description: BizTalk Server 2010 volgt het vaste levenscyclus beleid.
+  description: BizTalk Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: cf79175dea88682f0ace56ab69a2dc9e933ccc58
   ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "903685"
 name: BizTalk Server 2010
 summary: >+
-  BizTalk Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  BizTalk Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Enterprise RFID, Standard
+  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Enterprise RFID, Standaard
 
 products:
 - microsoft-servers
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/14/2010
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](/biztalk/install-and-config-guides/upgrade-to-biztalk-server-2020)\n* [Versiegegevens](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edition \n* Spelletjes\n* Schrijven\n* Enterprise\n* Enterprise RFID\n* Verre"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/biztalk/install-and-config-guides/upgrade-to-biztalk-server-2020)\n* [Versiegegevens](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Developer\n* Enterprise\n* Enterprise RFID\n* Standard"
