--- a/lifecycle-data/products/dynamics-365-for-finance-and-operations-onpremises.yml
+++ b/lifecycle-data/products/dynamics-365-for-finance-and-operations-onpremises.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics 365 voor Financiën en Operaties (on-premises)
-  description: Dynamics 365 for Finance and Operations (on-premises) volgt het Modern Lifecycle Policy.
+  title: Dynamics 365 voor Finance en Operations (on-premises)
+  description: Dynamics 365 for Finance and Operations (on-premises) volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 026c1a37c7e772e8a9982c4c0190ae4d44e24ea3
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868692"
-name: Dynamics 365 voor Financiën en Operaties (on-premises)
+name: Dynamics 365 voor Finance en Operations (on-premises)
 summary: >+
-  Dynamics 365 for Finance and Operations (on-premises) volgt het [Modern](/lifecycle/policies/modern) Lifecycle Policy.
+  Dynamics 365 for Finance and Operations (on-premises) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise
+  Dit is van toepassing op de volgende edities: Enterprise
 
 products:
 - dynamics
@@ -24,4 +24,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 06/15/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/on-prem-version-update-policy)\n* [Systeemvereisten](https://ax.help.dynamics.com/wiki/browser-requirements/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/on-prem-version-update-policy)\n* [Systeemvereisten](https://ax.help.dynamics.com/wiki/browser-requirements/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
