--- a/lifecycle-data/products/forefront-security-for-exchange-server.yml
+++ b/lifecycle-data/products/forefront-security-for-exchange-server.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Forefront beveiliging voor Exchange Server
-  description: Forefront beveiliging voor Exchange Server volgt het beleid voor de vaste levenscyclus.
+  title: Forefront Security for Exchange Server
+  description: Forefront Security for Exchange Server volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 0053b2aaf2be3d4c6ecbc29a6396bade882e16dc
   ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/13/2020
   ms.locfileid: "893715"
-name: Forefront beveiliging voor Exchange Server
+name: Forefront Security for Exchange Server
 summary: >
-  Forefront beveiliging voor Exchange Server volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Forefront Security for Exchange Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De routekaart voor beveiligingsproducten onder het Forefront-merk is gewijzigd. Dit product wordt stopgezet vanaf 31 december 2015.
+  > De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd. Dit product wordt per 31 december 2015 stopgezet.
 products:
 - windows
 policyType: fixed
@@ -35,4 +35,4 @@ releases:
 - version: Original Release
   startDate: 03/08/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/security/business/explore/cybersecurity)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/security/business/explore/cybersecurity)"
