--- a/lifecycle-data/products/microsoft-internet-security-and-acceleration-server-2006.yml
+++ b/lifecycle-data/products/microsoft-internet-security-and-acceleration-server-2006.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Internet Security and Acceleration Server 2006
-  description: Microsoft Internet Security and Acceleration Server 2006 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Internet Security and Acceleration Server 2006 volgt het vaste levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 6e2ed1ecf6b002767d3aaf13d12cc14da3042fac
   ms.sourcegitcommit: e3a3bd051020add66386d68528657bb59240d90b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/30/2020
   ms.locfileid: "878852"
 name: Microsoft Internet Security and Acceleration Server 2006
-summary: "Microsoft Internet Security and Acceleration Server 2006 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Internet Security and Acceleration Server 2006 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - microsoft-servers
 policyType: fixed
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 10/17/2006
   endDate: 07/14/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
