--- a/lifecycle-data/products/microsoft-lync-phone-edition.yml
+++ b/lifecycle-data/products/microsoft-lync-phone-edition.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Lync Phone Edition
-  description: Microsoft Lync Phone Edition volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Lync Phone-editie
+  description: Microsoft Lync Phone Edition volgt het vaste levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 9eab078296b6c16d3acdc1552739dabb02ab10a1
   ms.sourcegitcommit: e219a019691b1cde9e6f715e4e725b5861450d57
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/31/2020
   ms.locfileid: "879491"
-name: Microsoft Lync Phone Edition
+name: Microsoft Lync Phone-editie
 summary: >+
-  Microsoft Lync Phone Edition volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Lync Phone Edition volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2011
   endDate: 04/11/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Aanvullende informatie](https://techcommunity.microsoft.com/t5/Skype-for-Business-Blog/Certified-Skype-for-Business-Online-Phones-and-what-this-means/ba-p/120035)\n\n> [!NOTE]\n> Lync Phone Edition wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone Edition is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aanvullende informatie](https://techcommunity.microsoft.com/t5/Skype-for-Business-Blog/Certified-Skype-for-Business-Online-Phones-and-what-this-means/ba-p/120035)\n\n> [!NOTE]\n> Lync Phone-edtie wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone-editie is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013."
