--- a/lifecycle-data/products/microsoft-net-framework-47.yml
+++ b/lifecycle-data/products/microsoft-net-framework-47.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 4.7
-  description: Microsoft .NET Framework 4.7 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft .NET Framework 4.7 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3eb97f49087179fcd377fb1a9c360f52f543e6d2
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868746"
 name: Microsoft .NET Framework 4.7
 summary: >+
-  Microsoft .NET Framework 4.7 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft .NET Framework 4.7 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 04/11/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-47)\n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n\n> [!NOTE]\n> .NET Framework is een onderdeel van het Windows OS. Componenten krijgen dezelfde ondersteuning als hun bovenliggende product of platform."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-47)\n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n\n> [!NOTE]\n> .NET Framework is onderdeel van het Windows-besturingssysteem. Componenten ontvangen dezelfde ondersteuning als het bovenliggende product of platform."
