--- a/lifecycle-data/products/microsoft-office-communications-server-2007-r2.yml
+++ b/lifecycle-data/products/microsoft-office-communications-server-2007-r2.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Communications Server 2007 R2
-  description: Microsoft Office Communications Server 2007 R2 volgt het vaste levenscyclus beleid.
+  description: Microsoft Office Communications Server 2007 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 08/07/2020
   ms.openlocfilehash: 229bad5ba97248c738f950b7252cd9c69e238cf1
   ms.sourcegitcommit: 41160e72cd21aa5bf1748336c3975d8ec9b9ac06
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/07/2020
   ms.locfileid: "885824"
 name: Microsoft Office Communications Server 2007 R2
-summary: "Microsoft Office Communications Server 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende versies: all applicable, Enterprise, XMPP Gateway\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie migratie richtlijnen. \n"
+summary: "Microsoft Office Communications Server 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Alles waarop dit van toepassing is, Enterprise, XMPP-gateway\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Raadpleeg de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 09/28/2009
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n> [!NOTE]\n> XMPP Gateway uitgebracht op 9/28/2009.\n\n## <a name=\"editions\"></a>Edition \n* Allemaal van toepassing\n* Enterprise\n* XMPP Gateway"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n> [!NOTE]\n> XMPP-gateway uitgebracht op 28-9-2009.\n\n## <a name=\"editions\"></a>Edities \n* Alles wat van toepassing is\n* Enterprise\n* XMPP-gateway"
