--- a/lifecycle-data/products/microsoft-office-onenote-2003.yml
+++ b/lifecycle-data/products/microsoft-office-onenote-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office OneNote 2003
-  description: Microsoft Office OneNote 2003 volgt het vaste levenscyclus beleid.
+  description: Microsoft Office OneNote 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 3e15412772e534095db735abb6c2e51bdcc5d7b1
   ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/13/2020
   ms.locfileid: "893345"
 name: Microsoft Office OneNote 2003
 summary: >+
-  Microsoft Office OneNote 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Office OneNote 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 11/19/2003
   endDate: 07/26/2005
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
