--- a/lifecycle-data/products/silverlight-5.yml
+++ b/lifecycle-data/products/silverlight-5.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Zilverlicht 5
-  description: Silverlight 5 volgt het beleid voor vaste levenscyclus.
+  title: Silverlight 5
+  description: Silverlight 5 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2bdc8039724e69c5693e178d5697eb4e7242c3d2
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868770"
-name: Zilverlicht 5
+name: Silverlight 5
 summary: >+
-  Silverlight 5 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Silverlight 5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 12/09/2011
   endDate: 10/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Silverlight 5 ondersteunt browsers die hier worden vermeld via 10/12/2021, of via de levenscyclus van de onderliggende browsers, indien dit korter is.](https://www.microsoft.com/getsilverlight/locale/html/installation-win-SL5.html)\n* [Silverlight Einde van ondersteuning](https://support.microsoft.com/help/4511036/silverlight-end-of-support)\n\n> [!NOTE]\n> Microsoft zal een melding van minimaal 12 maanden verstrekken voordat de ondersteuning voor hulpprogramma's wordt beëindigd."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Silverlight 5 ondersteunt browsers die op deze pagina worden vermeld tot en met 12-10-2021 of gedurende de levenscyclus van de onderliggende browsers, afhankelijk van welke korter is.](https://www.microsoft.com/getsilverlight/locale/html/installation-win-SL5.html)\n* [Einde van de ondersteuning voor Silverlight](https://support.microsoft.com/help/4511036/silverlight-end-of-support)\n\n> [!NOTE]\n> Microsoft zal minimaal 12 maanden van tevoren melden dat de ondersteuning voor Hulpprogramma's wordt beëindigd."
