--- a/lifecycle-data/products/sql-server-2017.yml
+++ b/lifecycle-data/products/sql-server-2017.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SQL Server 2017
-  description: SQL Server 2017 volgt het beleid voor vaste levenscyclus.
+  description: SQL Server 2017 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8eb60aa5e94d8c064f0bb06f4bfb11782141d320
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868815"
 name: SQL Server 2017
 summary: >+
-  SQL Server 2017 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  SQL Server 2017 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit geldt voor de volgende edities: op Linux (alle edities), op Windows (alle edities)
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 09/29/2017
   endDate: 10/12/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n> [!NOTE]\n> Vanaf SQL Server 2017 worden er geen Service Packs uitgebracht.\n\n## <a name=\"editions\"></a>Edities \n* op Linux (alle edities)\n* op Windows (alle edities)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n> [!NOTE]\n> Vanaf SQL Server 2017 worden er geen Servicepacks uitgebracht.\n\n## <a name=\"editions\"></a>Edities \n* op Linux (alle edities)\n* op Windows (alle edities)"
