--- a/lifecycle-data/products/system-center-operations-manager-2007-r2.yml
+++ b/lifecycle-data/products/system-center-operations-manager-2007-r2.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: System Center Operations Manager 2007 R2
-  description: System Center Operations Manager 2007 R2 volgt het vaste levenscyclus beleid.
+  description: System Center Operations Manager 2007 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 8276b2ba221fb3c6c05948ac9712c3e10c9a1628
   ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/13/2020
   ms.locfileid: "892494"
 name: System Center Operations Manager 2007 R2
-summary: "System Center Operations Manager 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie migratie-instructies hieronder. \n"
+summary: "System Center Operations Manager 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - msc
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 08/20/2009
   endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](/system-center/scom/deploy-upgrade-overview?view=sc-om-2019)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/system-center/scom/deploy-upgrade-overview?view=sc-om-2019)"
