--- a/lifecycle-data/products/system-center-service-manager-semi-annual-channel.yml
+++ b/lifecycle-data/products/system-center-service-manager-semi-annual-channel.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: System Center Service Manager Semi Jaarlijks Kanaal
-  description: System Center Service Manager Semi Annual Channel volgt het beleid voor moderne levenscyclus.
+  title: System Center Service Manager Semi-Annual-kanaal
+  description: System Center Service Manager Semi-Annual-kanaal volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 37355211dc2600ad5f372f914e386a836b5c4be9
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868740"
-name: System Center Service Manager Semi Jaarlijks Kanaal
+name: System Center Service Manager Semi-Annual-kanaal
 summary: >
-  System Center Service Manager Semi Annual Channel volgt het [beleid voor moderne](/lifecycle/policies/modern) levenscyclus.
+  System Center Service Manager Semi-Annual-kanaal volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - msc
 policyType: modern-on-prem
@@ -31,4 +31,4 @@ releases:
 - version: Version 1801
   startDate: 02/08/2018
   endDate: 08/08/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/system-center/scsm/upgrade-sm?view=sc-sm-2019)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/system-center/scsm/upgrade-sm?view=sc-sm-2019)"
