--- a/lifecycle-data/products/system-center-virtual-machine-manager-semi-annual-channel.yml
+++ b/lifecycle-data/products/system-center-virtual-machine-manager-semi-annual-channel.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: System Center Virtual Machine Manager Semi Jaarlijks Kanaal
-  description: System Center Virtual Machine Manager Semi Annual Channel volgt het beleid voor moderne levenscyclus.
+  title: System Center Virtual Machine Manager Semi-Annual-kanaal
+  description: System Center Virtual Machine Manager Semi-Annual-kanaal volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8972aa6593d08e6325e8ff4d71d5fb04609caa92
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868798"
-name: System Center Virtual Machine Manager Semi Jaarlijks Kanaal
+name: System Center Virtual Machine Manager Semi-Annual-kanaal
 summary: >
-  System Center Virtual Machine Manager Semi Annual Channel volgt het [beleid voor moderne](/lifecycle/policies/modern) levenscyclus.
+  System Center Virtual Machine Manager Semi-Annual-kanaal volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - msc
 policyType: modern-on-prem
@@ -31,4 +31,4 @@ releases:
 - version: Version 1801
   startDate: 02/08/2018
   endDate: 08/08/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/system-center/vmm/upgrade-vmm?view=sc-vmm-2019#upgrade-to-system-center-2019---virtual-machine-manager)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/system-center/vmm/upgrade-vmm?view=sc-vmm-2019#upgrade-to-system-center-2019---virtual-machine-manager)"
