--- a/lifecycle-data/products/visual-studio-team-foundation-server-2010.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2010
-  description: Visual Studio Team Foundation Server 2010 volgt het vaste levenscyclus beleid.
+  description: Visual Studio Team Foundation Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: c0d6be70c5ce001b56c69d5b0ca374b014ecf598
   ms.sourcegitcommit: 72c1339c867caa2110c5c1501a6659bcee72415d
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/21/2020
   ms.locfileid: "906784"
 name: Visual Studio Team Foundation Server 2010
 summary: >+
-  Visual Studio Team Foundation Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visual Studio Team Foundation Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: alle van toepassing zijnde externe verbindingslijnen
+  Dit geldt voor de volgende edities: Allemaal van toepassing, Externe connector
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 06/29/2010
   endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](/azure/devops/server/upgrade/get-started?view=azure-devops)\n* [Azure dev OPS](https://azure.microsoft.com/services/devops/migrate/)\n\n\n## <a name=\"editions\"></a>Edition \n* Allemaal van toepassing\n* Externe verbindingslijn"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/azure/devops/server/upgrade/get-started?view=azure-devops)\n* [Azure Dev Ops](https://azure.microsoft.com/services/devops/migrate/)\n\n\n## <a name=\"editions\"></a>Edities \n* Alles wat van toepassing is\n* Externe connector"
