--- a/lifecycle-data/products/windows-81.yml
+++ b/lifecycle-data/products/windows-81.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows 8,1
-  description: Windows 8,1 volgt het vaste levenscyclus beleid.
+  title: Windows 8.1
+  description: Windows 8.1 volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: 42fc7e148a73c5583047b7bed3862484dea56340
   ms.sourcegitcommit: 72c1339c867caa2110c5c1501a6659bcee72415d
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/21/2020
   ms.locfileid: "906651"
-name: Windows 8,1
+name: Windows 8.1
 summary: >+
-  Windows 8,1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows 8.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Enterprise N, N, Pro met Media Center, Professional, Professional N, SL
+  Dit is van toepassing op de volgende edities: Enterprise, Enterprise N, N, Pro met Media Center, Professional, Professional N, SL
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2013
   endDate: 01/10/2023
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Veelgestelde vragen over de levenscyclus-Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Enterprise N\n* P\n* Pro met Media Center\n* Professional\n* Professionele N\n* LINEAIR"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Enterprise N\n* N\n* Pro met Media Center\n* Professional\n* Professional N\n* SL"
