--- a/lifecycle-data/products/microsoft-office-sharepoint-portal-server-2003.yml
+++ b/lifecycle-data/products/microsoft-office-sharepoint-portal-server-2003.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Office SharePoint Portal Server 2003
   description: Microsoft Office SharePoint Portal Server 2003 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: ddcdf5740b01da6e536d1d65bcde6a80f702e8e6
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 09/01/2020
+  keywords: ''
+  ms.openlocfilehash: 1599486e9db7839270eb4b01d0fb951008b96010
+  ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812362"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "941776"
 name: Microsoft Office SharePoint Portal Server 2003
 summary: >+
   Microsoft Office SharePoint Portal Server 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -34,4 +35,4 @@ releases:
 - version: Original Release
   startDate: 11/23/2003
   endDate: 01/10/2006
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Microsoft Office SharePoint Portal Server 2003-documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint2003/bb931735(v=office.12))\n* [Microsoft Office SharePoint Portal Server 2003-productdocumentatie](/previous-versions/tn-archive/cc749901(v=technet.10))"
