--- a/lifecycle-data/products/microsoft-sharepoint-server-2010.yml
+++ b/lifecycle-data/products/microsoft-sharepoint-server-2010.yml
@@ -4,12 +4,12 @@ metadata:
   description: Microsoft SharePoint Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Access Services,All applicable,Excel Services,Performance Point Services
-  ms.openlocfilehash: 0960eb0d25273c7cdca16fa4019b4b2e7b044900
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
+  ms.openlocfilehash: 02a1a5085dbd39b7379b0e71f69300095cfa54da
+  ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "929820"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "941554"
 name: Microsoft SharePoint Server 2010
 summary: >+
   Microsoft SharePoint Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsextensie](https://aka.ms/SharePoint/server/2010/supportextension)\n* [Richtlijnen voor migratie](/office365/enterprise/upgrade-from-sharepoint-2010)\n\n> [!NOTE]\n> De datum voor het einde van de ondersteuning voor dit product is uitgesteld van 13 oktober 2020 naar 13 april 2021.\n\n## <a name=\"editions\"></a>Edities \n* Access Services\n* Alles wat van toepassing is\n* Excel Services\n* Performance Point Services"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsextensie](https://aka.ms/SharePoint/server/2010/supportextension)\n* [Richtlijnen voor migratie](/office365/enterprise/upgrade-from-sharepoint-2010)\n* [Microsoft SharePoint Server 2010-documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n* [Microsoft SharePoint Server 2010-productdocumentatie](/previous-versions/office/sharepoint-server-2010/cc303422(v=office.14))\n\n> [!NOTE]\n> De datum voor het einde van de ondersteuning voor dit product is uitgesteld van 13 oktober 2020 naar 13 april 2021.\n\n## <a name=\"editions\"></a>Edities \n* Access Services\n* Alles wat van toepassing is\n* Excel Services\n* Performance Point Services"
