--- a/lifecycle-data/products/microsoft-sql-server-2008.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft SQL Server 2008
   description: Microsoft SQL Server 2008 volgt het vaste levenscyclusbeleid.
-  ms.date: 08/03/2020
-  ms.openlocfilehash: 15d47cb19d68d2ebb70659d43f7341eba2db1663
-  ms.sourcegitcommit: ea5579a833360652f47792f68134e2b25be4d487
+  ms.date: 09/01/2020
+  keywords: Datacenter,Developer,Enterprise,Express,Express with Advanced Services,Standard,Standard Edition for Small Business,Web,Workgroup
+  ms.openlocfilehash: e5bb477dc06874d285717a07c49f44473f599d63
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/04/2020
-  ms.locfileid: "882210"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "929709"
 name: Microsoft SQL Server 2008
 summary: >
   Microsoft SQL Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -43,4 +44,4 @@ releases:
 - version: Original Release
   startDate: 11/06/2008
   endDate: 04/13/2010
-content: "> [!TIP]\n> Voor de Datacenter-, Standard-, Enterprise-, Web- en Workgroup-edities van dit product zijn extra beveiligingsupdates (Extended Security Updates/ESU) beschikbaar voor tot drie aanvullende jaren na beëindiging van de ondersteuning.\nRelease-------------------------------Startdatum----Datum\n\nExtra beveiligingsupdate jaar 3---13/07/2021---12/07/2022\n\nExtra beveiligingsupdate jaar 2---14/07/2021---13/07/2021\n\nExtra beveiligingsupdate jaar 1---09/07/2019---14/07/2020\n\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services-blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 09/07/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
+content: "> [!TIP]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de Datacenter-, Standard-, Enterprise-, Web-, Workgroup- en Embedded-edities van dit product tot nog drie jaar na het einde van de ondersteuning.\n\n## <a name=\"links\"></a>Koppelingen \n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services-blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 09/07/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
